<resources>
    <string name="app_name">NepChat</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_your_email">Email</string>
    <string name="enter_your_password">Password</string>
    <string name="next">Next</string>
    <string name="reset_code">Enter the Code We Sent To</string>
    <string name="enter_code">Enter Code</string>
    <string name="continue_">Continue</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change_password">Change Password</string>
    <string name="create_account">Create Account</string>
    <string name="name">Full Name</string>
    <string name="enter_your_name">Name</string>
    <string name="sign_up">Sign Up</string>

</resources>