<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/animation_list"
    tools:context=".ForgotPassword">

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/helvetica"
        android:shadowColor="@color/black"
        android:shadowDx="-1"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:text="@string/forgot_password"
        android:textColor="@color/darkgray"
        android:textSize="33sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgot_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="70dp"
        android:layout_marginLeft="70dp"
        android:fontFamily="@font/helvetica"
        android:text="Enter your email below to receive your password reset instruction."
        android:textAlignment="center"
        android:textColor="@color/darkgray"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password" />


    <EditText
        android:id="@+id/edt_txt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="28dp"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/darkgray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_desc" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="100dp"
        android:textSize="15sp"
        android:fontFamily="sans-serif"
        android:background="@drawable/hover"
        android:text="@string/next"
        android:textColor="@drawable/textcolorhover"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="clickNext" />

</androidx.constraintlayout.widget.ConstraintLayout>